get user info controller
