# internal/api/userservice/routes.go
@@ -7,13 +7,16 @@ import (
 type UserServiceRoutes struct {
 	handler                pkg.RequestHandler
 	userRegisterController *UserRegisterController
+	userGetInfoController  *UserGetInfoController
 }
 
 func NewUserServiceRoutes(
 	userRegisterController *UserRegisterController,
+	userGetInfoController *UserGetInfoController,
 	handler pkg.RequestHandler,
 ) *UserServiceRoutes {
 	return &UserServiceRoutes{
+		userGetInfoController:  userGetInfoController,
 		userRegisterController: userRegisterController,
 		handler:                handler,
 	}
@@ -23,4 +26,5 @@ func (r *UserServiceRoutes) Setup() {
 	group := r.handler.Gin.Group("/api/v1/users")
 
 	group.POST("/register", r.userRegisterController.Register)
+	group.GET("/get_info", r.userGetInfoController.GetInfo)
 }
